--- a/index.html
+++ b/index.html
@@ -4,75 +4,44 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Your description">
-	<meta name="keywords" content="Your keywords">
-	<meta name="author" content="Your name">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" async="" src="https://www.google-analytics.com/plugins/ua/ec.js"></script>
-	<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-	<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-P9FT69"></script>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
 	<!--<link rel="stylesheet" href="assets/tm/css/tm_docs.css" type="text/css" media="screen"> -->
 
 	<title> Alica Massage </title>
 </head>
 
-<body style="">
+<body id="homePage">
 
 <!--============================== HEADER =================================-->
-<header class="header">
-	<div class="nav-container">
-		<div class="nav-row">
-	    <nav class="menu">
-				<ul>
-					<li>
-	        	<a href="#">Home</a>
-	      		<span class="divider"> / </span>
-					</li>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#homePage">
+			<img src="img/logo-2.png" alt="Logo" style="width:40px; height:40px; margin: -10px auto;">
+			</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#homePage">HOME</a></li>
+        <li><a href="#about">BAND</a></li>
+        <li><a href="#services">TOUR</a></li>
+        <li><a href="#bookOnline">BOOK ONLINE</a></li>
+				<li><a href="#contact">CONTACT</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-					<li>
-	        	<a href="#">About</a>
-						<span class="divider"> / </span>
-					</li>
-
-				 	<li>
-	        	<a href="#">Services</a>
-						<span class="divider"> / </span>
-					</li>
-
-					<li>
-	      		<a href="#">Book Online</a>
-						<span class="divider"> / </span>
-					</li>
-
-				 	<li>
-	        	<a href="#">Contact</a>
-					</li>
-				</ul>
-	  	</nav>
-		</div>
-	</div>
-
-
-<!--============================== LOGO ==========================-->
-  <div class="logo-container">
-    <img class= "logo" src="img/logo-2.png" alt="Logo">
-    <h4 class="logo-name">ShinSei Therapeutic Massage & Bodywork Clinic</h4>
-	</div> <!-- End logo container-->
-
-<!--=================== HOME IMAGE ==================-->
-	<div class="cover">
-		<img class="cover-img" src="https://images.unsplash.com/photo-1519824145371-296894a0daa9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8d6d77a200077530beff1d2b4f600be7&auto=format&fit=crop&w=1350&q=80" alt="cover image">
-		<div class="cover-content">
-			<h2> Comfort, Relaxation & Experience </h2>
-			<p> Get the best therapeutic massage experience possible, while also empowering & educating you to reach your wellness goals</p>
-		</div> <!-- End cover-content-->
-	</div><!-- End cover -->
-</header>
 
 <!--===================== CONTENT =======================-->
 <div id="content">
@@ -206,17 +175,9 @@
 	</div>
 </footer>
 
-<script type="text/javascript">
- var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-7078796-5']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();</script>
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P9FT69"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P9FT69');</script><!-- End Google Tag Manager -->
-<a href="#" id="toTop" style="margin-right: -234px; right: 50%; display: none;"><span id="toTopHover"></span></a></body><!-- Google Tag Manager --></html>
+<!-- Javascript Files -->
+<script src="js.jquery.min.js"> </script>
+<script src="js/bootstrap.min.js"> </script>
 </body>
 
 </html>
