--- a/index.html
+++ b/index.html
@@ -2,182 +2,442 @@
 <html lang="en">
 
 <head>
+	<title> Alica Massage </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
-	<!--<link rel="stylesheet" href="assets/tm/css/tm_docs.css" type="text/css" media="screen"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+	body {
+		font: 400 15px Open Sans, sans-serif;
+		line-height: 1.8;
+	}
 
-	<title> Alica Massage </title>
+	h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+	}
+
+	h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+	}
+	/* NAVIGATION */
+	.navbar {
+    margin-bottom: 0;
+    background-color: #86C129;
+    z-index: 9999;
+    border: 0;
+    font-size: 15px !important;
+		font-family: 'Roboto', sans-serif;;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+	}
+
+	.navbar li a, .navbar .navbar-brand {
+	    color: #fff !important;
+	}
+
+	.navbar-nav li a:hover, .navbar-nav li.active a {
+	    color: #86C129 !important;
+	    background-color: #fff !important;
+	}
+
+	.navbar-default .navbar-toggle {
+	    border-color: transparent;
+	    color: #fff !important;
+	}
+
+	/* CONTAINER */
+	.container {
+		width: 100%;
+	}
+
+	/* FRONT IMAGE */
+	.jumbotron {
+		background-image:url("img/cover-img.png");
+		padding: 100px 25px;
+		font-family: 'Roboto', sans-serif;;
+	}
+
+	/* ABOUT */
+	.container-fluid {
+		padding: 60px 50px;
+	}
+
+	.bg-grey {
+		background-color: #f6f6f6;
+	}
+
+	.logo {
+    width: 40%;
+		font-size: 200px;
+		color: #86C129;
+	}
+
+	@media screen and (max-width: 768px) {
+	    .col-sm-4 {
+	        text-align: center;
+	        margin: 25px 0;
+	    }
+	}
+
+	/* SERVICES */
+	.service {
+		border: 10px solid transparent;
+		margin-bottom: 25px;
+		width: 70%;
+		height: 70%;
+		opacity: 0.7;
+	}
+	.service:hover {
+		border-color: #f1f1f1;
+	}
+
+	/* TESTIMONIALS */
+	.carousel {
+		padding: 50px;
+	}
+	.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #86C129;
+	}
+
+	.carousel-indicators li {
+	    border-color: darkgrey;
+	}
+
+	.carousel-indicators li.active {
+	    background-color: #86C129;
+	}
+
+	.item h4 {
+	    font-size: 19px;
+	    line-height: 1.375em;
+	    font-weight: 400;
+	    font-style: italic;
+	    margin: 70px 0;
+	}
+
+	.item span {
+	    font-style: normal;
+	}
+
+	/* PRICING PANEL */
+	.panel {
+    border: 1px solid #86C129;
+    border-radius:0;
+    transition: box-shadow 0.5s;
+	}
+
+	.panel:hover {
+	    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+	}
+
+	.panel-footer .btn:hover {
+	    border: 1px solid #86C129;
+	    background-color: #fff !important;
+	    color: #86C129;
+	}
+
+	.panel-heading {
+	    color: #fff !important;
+	    background-color: #86C129 !important;
+	    padding: 25px;
+	    border-bottom: 1px solid transparent;
+	    border-top-left-radius: 0px;
+	    border-top-right-radius: 0px;
+	    border-bottom-left-radius: 0px;
+	    border-bottom-right-radius: 0px;
+	}
+
+	.panel-footer {
+	    background-color: #fff !important;
+	}
+
+	.panel-footer h3 {
+	    font-size: 32px;
+	}
+
+	.panel-footer h4 {
+	    color: #aaa;
+	    font-size: 14px;
+	}
+
+	.panel-footer .btn {
+	    margin: 15px 0;
+	    background-color: #86C129;
+	    color: #fff;
+	}
+
+	/* FOOTER */
+	.fa {
+		font-size: 35px;
+	}
+	</style>
 </head>
 
-<body id="homePage">
+<body id="homePage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<!--============================== HEADER =================================-->
+<!-- NAVIGATION -->
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#homePage">
-			<img src="img/logo-2.png" alt="Logo" style="width:40px; height:40px; margin: -10px auto;">
-			</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#homePage">HOME</a></li>
-        <li><a href="#about">BAND</a></li>
-        <li><a href="#services">TOUR</a></li>
-        <li><a href="#bookOnline">BOOK ONLINE</a></li>
-				<li><a href="#contact">CONTACT</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#testimonials">TESTIMONIALS</a></li>
+        <li><a href="#pricing">PRICING</a></li>
+				<li><a href="#bookonline">BOOK ONLINE</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-
 <!--===================== CONTENT =======================-->
 <div id="content">
 	<div class="container">
+		<!-- Jumbotron Header -->
+		<div class="jumbotron text-center">
+			<h1> ShinSei Therapeutic Massage & Bodywork Clinic </h1>
+			<p> Best therapeutic massage experience </p>
+		</div> <!-- End Jumbotron -->
+
+		<!-- ABOUT -->
+		<div id="about" class="container-fluid">
+			<div class=row>
+				<div class="col-sm-8">
+				 <h2>About</h2>
+				 <p>Lorem ipsum..</p>
+			 </div>
+			 <div class="col-sm-4">
+				 <img src="img/logo-2.png" class="logo" alt="Logo">
+			 </div>
+		 </div>
+		</div>
+
+		<div class="container-fluid bg-grey">
+			<div class="row">
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-globe logo"></span>
+				</div>
+				<div class="col-sm-8">
+					<h2> Our Values </h2>
+					<h4><strong>MISSION:</strong> To provide the best therapeutic massage experience possible, and to educate & empower my clients to help them reach their wellness goals.</h4>
+				</div>
+			</div>
+		</div>
+
+
 		<!-- SERVICES -->
-		<div class="row">
-			<article class="col-svc-1">
-				<h3 class="central-title"> SERVICES </h3>
+		<div id="services" class="container-fluid text-center">
+			<h2> SERVICES </h2>
+			<br>
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="img/swedish.png" class="img-circle service" alt="Swedish Massage">
+					<h4> Swedish (Relaxation Massage) </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/deep-tissue.png" class="img-circle service" alt="Deep Tissue Massage">
+					<h4> Deep Tissue Massage </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/trigger-point.png" class="img-circle service" alt="Trigger Point Therapy">
+					<h4> Trigger Point Therapy </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/sports.png" class="img-circle service" alt="Sports Massage">
+					<h4> Sports Massage </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/prenatal.png" class="img-circle service" alt="Prenatal Massage">
+					<h4> Prenatal Massage </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/geriatric-massage.png" class="img-circle service" alt="Geriatric Massage">
+					<h4> Geriatric Massage </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="img/posture.png" class="img-circle service" alt="Breathing/Posture/Movement Education">
+					<h4> Breathing/Posture/Movement Education </h4>
+					<p> Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- TESTIMONIALS -->
+
+		<div id="testimonials" class="carousel slide text-center bg-grey" data-ride="carousel">
+			<h2> TESTIMONIALS</h2>
+			<ol class="carousel-indicators">
+    		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    		<li data-target="#myCarousel" data-slide-to="1"></li>
+    		<li data-target="#myCarousel" data-slide-to="2"></li>
+  		</ol>
+
+			<!-- Wrapper for slides -->
+	  <div class="carousel-inner" role="listbox">
+	    <div class="item active">
+	    <h4>"I felt very comfortable and so relaxed that I fell asleep lol!"<br><span style="font-style:normal;">Amy Wilson</span></h4>
+	    </div>
+	    <div class="item">
+	      <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe</span></h4>
+	    </div>
+	    <div class="item">
+	      <h4>"Best massage I have had in a while. Would recommned 100%"<br><span style="font-style:normal;">Chandler Bing</span></h4>
+	    </div>
+	  </div>
+
+			<!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+
+		<!-- PRICING -->
+		<div id="pricing" class="container-fluid">
+			<div class="text-center">
+				<h2 style="padding: 30px;">Pricing</h2>
 			</div>
 			<div class="row">
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/swedish.png" alt="Swedish Massage">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Swedish (Relaxation Massage)</a>
-							</h5>
-
-							<p>
-								Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.
-							</p>
+				<div class="col-sm-4">
+					<div class="panel panel-default text-center">
+						<div class="panel-heading">
+							<h1> 30 Minutes </h1>
+						</div>
+						<div class="panel-footer">
+							<h3>$40</h3>
+							<button class="btn btn-lg"> Book Online</button>
 						</div>
 					</div>
-				</article>
+				</div>
 
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/deep-tissue.png" alt="Deep Tissue Massage">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Deep Tissue Massage</a>
-							</h5>
-
-							<p>
-								Conc tetur adipi scing. Praesent
-								vestibuum molstie lacuiirhs.
-								Aenean non ummy dreriauris.
-							</p>
+				<div class="col-sm-4">
+					<div class="panel panel-default text-center">
+						<div class="panel-heading">
+							<h1> 60 Minutes </h1>
+						</div>
+						<div class="panel-footer">
+							<h3>$60</h3>
+							<button class="btn btn-lg"> Book Online</button>
 						</div>
 					</div>
-				</article>
+				</div>
 
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/trigger-point.png" alt="Trigger Point Therapy">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Trigger Point Therapy</a>
-							</h5>
-
-							<p>
-								Vestibuum molstie lacuiirhs.
-								Aenean non ummy dreriauris.
-								Phasellllus porta. Fusce suscipit.
-							</p>
+				<div class="col-sm-4">
+					<div class="panel panel-default text-center">
+						<div class="panel-heading">
+							<h1> 90 Minutes </h1>
+						</div>
+						<div class="panel-footer">
+							<h3>$90</h3>
+							<button class="btn btn-lg"> Book Online</button>
 						</div>
 					</div>
-				</article>
-
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/sports.png" alt="Sports Massage">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Sports Massage</a>
-							</h5>
-
-							<p>
-								Aenean non ummy dreriauris.
-								Phasellllus porta. Fusce suscipit
-								 variusium sociis totdna tibus et.
-							</p>
-						</div>
-					</div>
-				</article>
-
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/prenatal.png" alt="Prenatal Massage">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Prenatal & Infant Massage</a>
-							</h5>
-
-							<p>
-								Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.
-							</p>
-						</div>
-					</div>
-				</article>
-
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/geriatric-massage.png" alt="Geriatric Massage">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Geriatric Massage</a>
-							</h5>
-
-							<p>
-								Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.
-							</p>
-						</div>
-					</div>
-				</article>
-
-				<article class="col-lg-3 col-sm-3 col-xs-12">
-					<div class="central">
-						<img src="img/posture.png" alt="Breathing/Posture/Movement Education">
-						<div class="svc-content">
-							<h5 class="second">
-								<a href="#">Breathing/Posture/Movement Education</a>
-							</h5>
-
-							<p>
-								Lorem ipsum dolor sit amet, conc tetur adipi scing. raesent vestibuum molstie lacuiirhs.
-							</p>
-						</div>
-					</div>
-				</article>
+				</div>
 			</div>
-		</div> <!-- End container -->
+		</div>
+
+		<!-- BOOK ONLINE -->
+		<div id="bookonline">
+
+		</div>
+
+		<!-- CONTACT -->
+		<div id="contact" class="container-fluid bg-grey">
+  		<h2 class="text-center" style="padding:20px;">CONTACT</h2>
+  		<div class="row">
+    		<div class="col-sm-5">
+		      <p>Contact us and we'll get back to you within 24 hours.</p>
+		      <p><span class="glyphicon glyphicon-map-marker"></span> Arthur, IL, US</p>
+		      <p><span class="glyphicon glyphicon-envelope"></span> allthingsmadenew@hotmail.com</p>
+    		</div>
+    		<div class="col-sm-7">
+      		<div class="row">
+        		<div class="col-sm-6 form-group">
+          		<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        		</div>
+        		<div class="col-sm-6 form-group">
+          		<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        		</div>
+      		</div>
+      		<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      		<div class="row">
+        		<div class="col-sm-12 form-group">
+          		<button class="btn btn-default pull-right" type="submit">Send</button>
+        		</div>
+      		</div>
+    		</div>
+  		</div>
+		</div>
+
+		<!-- GOOGLE MAPS -->
+		<!-- Add Google Maps -->
+		<div id="googleMap" style="height:400px;width:100%;"></div>
+		<script>
+		function myMap() {
+		var myCenter = new google.maps.LatLng(39.7163248, -88.4749596);
+		var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+		var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		var marker = new google.maps.Marker({position:myCenter});
+		marker.setMap(map);
+		}
+		</script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+
+		<!-- FOOTER -->
+		<footer class="container-fluid text-center">
+			<a href="https://www.facebook.com/ShinSeiMassage/" target="_blank" title="Facebook">
+    		<i class="fa fa-facebook-square" aria-hidden="true"></i>
+  		</a>
+		</footer>
+	</div> <!-- End container -->
 </div> <!-- End Content -->
-
-<footer id="footer">
-	<img src="img/logo-2.png" alt="Logo">
-	<div class="icons">
-		<a href="#" class="fa fa-facebook"></a>
-		<a href="#" class="fa fa-twitter"></a>
-		<a href="#" class="fa fa-instagram"></a>
-	</div>
-</footer>
-
-<!-- Javascript Files -->
-<script src="js.jquery.min.js"> </script>
-<script src="js/bootstrap.min.js"> </script>
 </body>
+<!-- Adding Service Worker -->
+<script>
+if('serviceWorker' in navigator) {
+  navigator.serviceWorker
+           .register('/sw.js')
+           .then(function() { console.log("Service Worker Registered"); });
+}
+</script>
 
 </html>
